--- a/influencer/templates/influencer/brands.html
+++ b/influencer/templates/influencer/brands.html
@@ -51,10 +51,10 @@
                                                 </div>
                                             </div>
                                         `
-                                        : '<div class="mdl-cell mdl-cell--5-col"></div>'
+                                        : ''
                                     }
                                     ${
-                                        (result[brand]['fields']['website'])
+                                        (result[brand]['fields']['instagram_handle'])
                                         ? `
                                             <div class="mdl-cell mdl-cell--4-col">
                                                 <div class="insta-wrapper">
