Make new UI changes for noauth views.

--- a/accounts/templates/accounts/account_exists.html
+++ b/accounts/templates/accounts/account_exists.html
@@ -15,24 +15,26 @@
 </div>
 <style>
     .container {
-        font-size: 1.5em;
-        width: 40vw;
-        margin-left: 30vw;
-        margin-top: 10vh;
-        background-color: #EEEEEE;
+        text-align: center;
+        background-color: #fff;
+        color: #424242;
+        width: 60vw;
+        margin-left: 20vw;
         padding: 2vh 2vw;
-        border-radius: 5px;
+        border-radius: 30px;
+        margin-top: 10vh;
+        font-size: 3vh;
+        line-height: 3vh;
     }
     .mdl-grid {
         margin-top: 2vh;
     }
     .mdl-grid button.mdl-button {
-        background-color: #161A1D !important;
-        color: #EEEEEE !important;
-        font-family: 'Rubik', sans-serif !important;
-        padding-top: 1px !important;
-        text-align: center;
-        width: 100%;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        padding: 1vh;
+        height: auto;
+        width: 20vw;
     }
 </style>
 {% endblock %}
