--- a/accounts/templates/accounts/password_reset/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset/password_reset_done.html
@@ -12,13 +12,16 @@
 </div>
 <style>
     .container {
-        background-color: #EEEEEE;
-        width: 50vw;
-        margin-left: 25vw;
-        margin-top: 10vh;
-        border-radius: 5px;
+        text-align: center;
+        background-color: #fff;
+        color: #424242;
+        width: 60vw;
+        margin-left: 20vw;
         padding: 2vh 2vw;
-        font-size: 1.5em;
+        border-radius: 30px;
+        margin-top: 10vh;
+        font-size: 4vh;
+        line-height: 4vh;
     }
     .i-container {
         width: 100%;
