--- a/accounts/templates/accounts/password_reset/password_reset_form.html
+++ b/accounts/templates/accounts/password_reset/password_reset_form.html
@@ -14,7 +14,7 @@
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--12-col">
                 <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-                    type="submit" value="Reset my password" />
+                    type="submit" value="Reset My Password" />
             </div>
         </div>
     </fieldset>
@@ -27,18 +27,22 @@
         width: 40vw;
         margin-left: 30vw;
         padding: 2vh 2vw;
-        background-color: #EEEEEE;
+        background-color: #fff;
         margin-top: 10vh;
         border-radius: 5px;
+        color: #424242;
     }
 
     input.mdl-button {
-        background-color: #161A1D !important;
-        color: #EEEEEE !important;
-        font-family: 'Rubik', sans-serif !important;
-        padding-top: 1px !important;
-        text-align: center;
-        margin: auto;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        font-family: 'Montserrat', sans-serif !important;
+        padding: 1vh;
+        height: auto;
+        width: 20vw;
+        border-radius: 5px;
+        font-size: 2vh;
+        text-transform: none;
     }
 
     .mdl-grid {
@@ -48,7 +52,12 @@
     .heading {
         font-size: 2em;
         margin-bottom: 3vh;
-        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        color: #150e41;
+        margin-top: 2vh;
+        margin-bottom: 4vh;
+        font-weight: bold;
     }
 
     .field-email {
