--- a/accounts/templates/accounts/registration_complete.html
+++ b/accounts/templates/accounts/registration_complete.html
@@ -8,15 +8,16 @@
 </div>
 <style>
     .container {
-        background-color: #EEEEEE;
-        color: #161A1D;
-        width: 40vw;
-        margin-left: 30vw;
-        padding: 2vh 2vw;
-        border-radius: 5px;
-        margin-top: 10vh;
-        font-size: 1.5em;
         text-align: center;
+        background-color: #fff;
+        color: #424242;
+        width: 60vw;
+        margin-left: 20vw;
+        padding: 2vh 2vw;
+        border-radius: 30px;
+        margin-top: 10vh;
+        font-size: 4vh;
+        line-height: 4vh;
     }
 
     .container i {
