--- a/accounts/templates/errors/base.html
+++ b/accounts/templates/errors/base.html
@@ -31,7 +31,7 @@
         }
 
         body {
-            background-color: #161A1D;
+            background-color: #150E41;
         }
 
         .mdl-layout__header {
