--- a/accounts/templates/accounts/influencer_registration.html
+++ b/accounts/templates/accounts/influencer_registration.html
@@ -20,21 +20,25 @@
 </script>
 <style>
     .form-wrapper {
-        background-color: #EEEEEE;
-        width: 40vw;
-        margin-left: 30vw;
+        background-color: #fff;
+        width: 60vw;
+        margin-left: 20vw;
         margin-top: 4vh;
         margin-bottom: 4vh;
-        border-radius: 5px;
+        border-radius: 30px;
         padding: 2vh 2vw;
     }
 
     input.mdl-button {
-        background-color: #161A1D !important;
-        color: #EEEEEE !important;
-        font-family: 'Rubik', sans-serif !important;
-        padding-top: 1px !important;
-        text-align: center;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        font-family: 'Montserrat', sans-serif !important;
+        padding: 1vh;
+        height: auto;
+        width: 20vw;
+        border-radius: 5px;
+        font-size: 2vh;
+        text-transform: none;
     }
 
     .button-container {
@@ -45,7 +49,16 @@
     .heading {
         font-size: 2em;
         margin-bottom: 3vh;
-        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        color: #150e41;
+        margin-top: 2vh;
+        margin-bottom: 4vh;
+        font-weight: bold;
+    }
+
+    form {
+        color: #424242;
     }
 
     .errorlist {
