--- a/accounts/templates/noauth/base.html
+++ b/accounts/templates/noauth/base.html
@@ -13,32 +13,35 @@
 
 <body>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Eczar&family=Rubik:wght@300;400&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 
         * {
-            font-family: 'Rubik', sans-serif;
-            font-weight: 400;
+            font-family: 'Quicksand', sans-serif;
         }
 
         button {
             color: #EEEEEE !important;
-            font-family: 'Rubik', sans-serif !important;
-            padding-top: 1px !important;
+            font-family: 'Quicksand', sans-serif !important;
+            text-transform: none !important;
+            font-size: 2vh !important;
         }
 
         button.mdl-button--colored {
-            color: #161A1D !important;
-            background-color: #EEEEEE !important;
+            color: #fff !important;
+            background-color: #0471ff !important;
+            border-radius: 15px;
+            font-weight: bold;
         }
 
         body {
-            background-color: #161A1D;
+            background-color: #150E41;
         }
 
         .mdl-layout__header {
             background-color: transparent;
             box-shadow: none;
             margin-top: 3vh;
+            height: 10vh;
         }
 
         .logo-container {
@@ -54,9 +57,9 @@
         }
 
         .logo-text {
-            font-size: 2em;
+            font-size: 4.5vh;
             padding-left: 10px;
-            font-family: 'Roboto Slab', serif;
+            font-family: 'Quicksand', sans-serif;
             color: #E0E0E0;
         }
 
@@ -68,38 +71,52 @@
             font-size: 1.2em;
             color: #EEEEEE;
         }
+
+        .mdl-navigation__link {
+            padding: 0 0.4vw !important;
+        }
+
+        .mdl-layout__header-row {
+            padding: 0 2vw 0 4vw
+        }
     </style>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header">
+    <div class="mdl-layout mdl-js-layout">
+        <header class="mdl-layout__header mdl-layout__header--scroll">
             <div class="mdl-layout__header-row">
                 <a href="{% url 'accounts:landing' %}" class="logo-container">
                     <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-img" />
-                    <div class="logo-text">ENDORSITY</div>
+                    <div class="logo-text">Endorsity</div>
                     <!-- <span class="mdl-layout-title">Endorsity</span> -->
                 </a>
                 <div class="mdl-layout-spacer"></div>
                 <a href="{% url 'accounts:how_it_works' %}" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">engineering</i>
-                        &nbsp;&nbsp;How It Works
+                        &nbsp;How It Works
+                    </button>
+                </a>
+                <a href="#" class="mdl-navigation__link">
+                    <button class="mdl-button mdl-js-button">
+                        <i class="material-icons">wb_incandescent</i>
+                        &nbsp;How Are We Different
                     </button>
                 </a>
                 <a href="#" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">monetization_on</i>
-                        &nbsp;&nbsp;Pricing
-                    </button>
-                </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
-                    <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">question_answer</i>
-                        &nbsp;&nbsp;Contact Us
+                        &nbsp;Pricing
                     </button>
                 </a>
                 <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">help</i>
-                        &nbsp;&nbsp;FAQ
+                        &nbsp;FAQ
+                    </button>
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
+                    <button class="mdl-button mdl-js-button">
+                        <i class="material-icons">question_answer</i>
+                        &nbsp;Contact Us
                     </button>
                 </a>
                 <a class="mdl-navigation__link" href="{% url 'accounts:login' %}">
@@ -110,14 +127,6 @@
                 </a>
             </div>
         </header>
-        <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-            <!-- <span class="mdl-layout-title">Endorsity</span> -->
-            <nav class="mdl-navigation">
-                <a class="mdl-navigation__link" href="{% url 'accounts:how_it_works' %}">How It Works</a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">Contact Us</a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">FAQ</a>
-            </nav>
-        </div>
         <main class="mdl-layout__content">
             <div class="page-content">
                 {% block main %}{% endblock %}
