--- a/brand/templates/brand/base.html
+++ b/brand/templates/brand/base.html
@@ -182,6 +182,11 @@
         .mdl-layout__content {
             border-top: 1px solid #EEEEEE
         }
+
+        .no-notifs {
+            text-align: center;
+            margin-top: 1vh;
+        }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
@@ -260,6 +265,8 @@
             <a href="{{ notification.link }}">
                 <li class="mdl-menu__item">{{ notification.message }}</li>
             </a>
+            {% empty %}
+            <li class="no-notifs">No pending notifications.</li>
             {% endfor %}
             <a class="all-notifs-link" href="/notifications/">
                 <li class="mdl-menu__item view-all-notifs">View All Notifications</li>
